fix: grids on loan page are aligned (#307)
* chore: deprecate Column

* feat: introduce TwelveColumn

* fix: grids on loan page are aligned

--- a/components/LoanHeader/LoanHeader.module.css
+++ b/components/LoanHeader/LoanHeader.module.css
@@ -14,3 +14,11 @@
 .red {
   color: var(--highlight-alert-100);
 }
+
+.media {
+  grid-column: col-start / span 4;
+}
+
+.form {
+  grid-column: col-start 5 / 9;
+}
